* (bug 15) Add 'talkurl' attribute for block and unblock event.
* (bug 31) Support for protect/unprotect log type and the (new) modifyprotect.
* Added SWMTBot.exe.config to the SVN. For some reason it was on the botserver
  but never made it here (this file is required to get the output of log4net.
  ie. to terminal or run.log file).

=== New features in 1.20.0 ===

* (bug 12) Trim whitespace around parameter when dealing with ListManager.
* (bug 29) A few of the requested feed filters added: feedFilterUsersAnon,
  feedFilterUsersReg, feedFilterEventUpload.
* (bug 30) New option to prevent dbconnection in ListManager.ClassifyEditor
  Can now be done by adding setting disableClassifyEditor in SWMTBot.ini.
* (bug 27) New command "config" for getting the customizable .ini settings
  optional parameter 'all' to broadcast it (like "count" does by default)
  causing all other bots in the same channel to also show their configs.

=== Bug fixes in 1.20.0 ===

* SWMTUtils.wikiEncode() now encodes exclamation mark aswell (some IRC clients
  cut off links that ends with it).
* (bug 11) added missing clean-attributes for EventType edit and newpage 
* (bug 16) Remove deprecated {ipcat}.
* added "patrol" (mark as patrolled) and "review" (FlaggedRevs/PendingChanges)
  as an empty switchcase in RCReader->rcirc_OnChannelMessage to clear out some
  unnecessary WARNs about unhandled log types.
* (bug 6) Pagetitles containing a slash were not reported
  and cause a WARN in log.
* nsEnglish[4] and nsEnglish[5] have been changed from "Wikipedia" to "Project"
  to fix the bug where one could watchlist project-ns page of a non-WP project,
  but when an edit occurs, the generated pagetitle (and url) gets the wrong
  namespace and thus resulted in a broken (404 error) link.
  "Project" works everywhere.

== Compatibility & Upgrading ==

The old deprecated {ipcat} attribute (which previously was manually set to an
empty string) has been removed from the Program and Console.msgs.