@@ -37,7 +37,7 @@
                     <header value="[Header]&#13;&#10;" />
                     <footer value="[Footer]&#13;&#10;" />
                     <conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />
-                </layout>-->
+                </layout> -->
             <!-- </appender> -->
         <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
             <file value="run.log" />
@@ -64,7 +64,6 @@
         <!-- <logger name="SWMTBot.Program">
 	            <level value="ALL" />
 	            <appender-ref ref="RollingLogFileAppender" />
-	        </logger>
-	    -->
+	        </logger> -->
     </log4net>
 </configuration>
